<resources>
    <string name="app_name">FinderProject</string>

    <!--  User-->
    <string name="enter_name">Enter Name </string>
    <string name="enter_address">Enter Home Address </string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="owner_field">User Input Field</string>
    <string name="sign_out">Sign Out</string>


    <!--    Shop Register-->
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="enter_shop_logo">Click on Image to select Shop logo</string>
    <string name="enter_shop_location">Enter Shop Location</string>
    <string name="enter_shop_google_location"><u>Designate Shop Location on Map</u></string>
    <string name="reg_shop_button">Submit</string>
    <string name="title_activity_select_location">Map</string>
    <string name="reg_shop">Register Shop</string>

    <!--    Item Add-->
    <string name="add_item">Add an Item</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_description">Enter Item Description</string>
    <string name="enter_item_type">Enter Item Type</string>
    <string name="enter_item_brand">Enter Item Brand</string>
    <string name="enter_item_picture"><u>Select image for the item</u></string>
    <string name="select_item_shop"><u>Select Shop</u></string>


    <!--    Navigation-->
    <string name="navigation_home">Home </string>
    <string name="navigation_popular">Popular </string>
    <string name="navigation_profile">My Profile </string>
    <string name="navigation_search">Search Items...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    Item-->
    <string name="item_details"><b>Details</b></string>
    <string name="item_brand"><b>Brand</b></string>
    <string name="item_type"><b>Type of Product</b></string>
    <string name="item_description"><b>Product Description</b></string>
    <string name="item_distributor"><b>Product Distributor</b></string>
    <string name="item_name"><b>Item Name</b></string>
    <!--    Default Text-->
    <string name="default_text">Default </string>
    <string name="default_dismiss">Dismiss </string>


</resources>