<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemAddAcitivty">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/add_item"
        android:textSize="25sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_item_image01"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/red_background_clipart" />

        <ImageView
            android:id="@+id/iv_item_image02"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/red_background_clipart" />

        <ImageView
            android:id="@+id/iv_item_image03"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/red_background_clipart" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_select_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#000000"
        android:padding="10dp"
        android:text="@string/enter_item_picture"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/etitemaddname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:autofillHints="@string/enter_item_name"
        android:gravity="center"
        android:hint="@string/enter_item_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etitemadddescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:autofillHints="@string/enter_item_description"
        android:gravity="center"
        android:hint="@string/enter_item_description"
        android:inputType="text" />

    <EditText
        android:id="@+id/etitemaddtype"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:autofillHints="@string/enter_item_type"
        android:gravity="center"
        android:hint="@string/enter_item_type"
        android:inputType="text" />

    <EditText
        android:id="@+id/etitemaddbrand"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:autofillHints="@string/enter_item_brand"
        android:gravity="center"
        android:hint="@string/enter_item_brand"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_select_item_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#000000"
        android:padding="10dp"
        android:text="@string/select_item_shop"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnitemadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnshop"
        android:text="@string/reg_shop_button" />

</LinearLayout>