<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_background_clipart"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/owner_field"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="Please type name"
        android:gravity="center"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/etuseraddress"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="Please type address"
        android:gravity="center"
        android:hint="@string/enter_address"
        android:inputType="text"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/etuserphonenumber"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="Please type phone number"
        android:gravity="center"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/etuseremail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="Please type email"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <Button
        android:id="@+id/btnuserregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        />

</LinearLayout>